# Youtube-Downloader

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml  run.bat  run.sh
.github/workflows/: ci.yml
src/ytdl/: __init__.py  cli.py  config.py  downloader.py  utils.py
